--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/EnterOrion/weather-app#readme",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "eslint": "^8.34.0",
     "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
